added new styling

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -78,7 +78,7 @@
 					<p>You can also reach us by email at: info@hiddensandiego.com
 						<br /> or you can call us at: 1-000-222-3333
 						<br /> Toll Free Phone Hours: Monday - Friday, 8am - 7pm CST (6am - 5pm PST)</p>
-					<a href="mailto:ekay@sdccd.edu?Subject=Hello%20Emily" target="_top">Send Email</a>
+					<a href="mailto:isserova@gmail.com?Subject=Hello%20Irina" target="_top">Send Email</a>
 					<form>
 						<fieldset id="comments" title="Comments">
 							<legend>Comments / Questions</legend>
@@ -116,7 +116,7 @@
 						<ol>
 							<li>
 								<label for="name">name</label>
-								<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First"  required /> <span class="require">*</span>
+								<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First" required /> <span class="require">*</span>
 							</li>
 							<li>
 								<label for="email">email </label>
