added new styling

--- a/pages/join_us.html
+++ b/pages/join_us.html
@@ -68,7 +68,7 @@
 			<h2>Hikes Resources</h2>
 		</header>
 		<section>
-			<div class="onLeftContent">
+			<div class="onCenterContent">
 				<h2>Join Us</h2>
 				<div class="clearIt"></div>
 				<section id="joinUs">
@@ -82,7 +82,7 @@
 								<!-- 4 text boxes -->
 								<li>
 									<label for="name">Name</label>
-									<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First"  required /> <span class="require">*</span>
+									<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First" required /> <span class="require">*</span>
 								</li>
 								<li>
 									<label for="email">Email</label>
@@ -173,10 +173,7 @@
 				</section>
 			</div>
 			<div class="clearIt"></div>
-			<aside class="places">
 
-				
-			</aside>
 			<div class="search searchTwo">
 				<gcse:search></gcse:search>
 			</div>
