added new styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<a href="index.html" class="active">Home</a>
 
 			<div class="dropdown">
-				<button class="dropbtn"><a href="pages/about.html">About <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="pages/about.html">About </a>
 
 				</button>
 				<div class="dropdown-content">
@@ -45,7 +45,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="pages/hiking.html">Hiking <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="pages/hiking.html">Hiking </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="pages/best_hikes.html">Best Hikes</a>
@@ -53,7 +53,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="pages/places.html">Places <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="pages/places.html">Places </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="pages/gallery.html">Gallery</a>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="pages/contact.html">Contact <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="pages/contact.html">Contact </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="pages/join_us.html">Join Us</a>
