--- a/pages/about.html
+++ b/pages/about.html
@@ -17,6 +17,8 @@
 	<script type="text/javascript" src="../scripts/search.js"></script>
 	<script src="../scripts/jquery-3.1.1.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="../scripts/show.js"></script>
+	<script type="text/javascript" src="../scripts/nav.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -26,7 +28,8 @@
 			<a href="../index.html" class="active">Home</a>
 
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/about.html">About <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/about.html">About 
+					</a>
 
 				</button>
 				<div class="dropdown-content">
@@ -35,7 +38,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/hiking.html">Hiking <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/hiking.html">Hiking </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/best_hikes.html">Best Hikes</a>
@@ -43,7 +46,8 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/places.html">Places <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/places.html">Places 
+					</a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/gallery.html">Gallery</a>
@@ -52,7 +56,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/contact.html">Contact <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/contact.html">Contact </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/join_us.html">Join Us</a>
