--- a/pages/adobe_falls.html
+++ b/pages/adobe_falls.html
@@ -16,6 +16,8 @@
 	<link href="../css/main.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="../scripts/search.js"></script>
 	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0&signed_in=true&callback=initMap"></script>
+	<script type="text/javascript" src="../scripts/nav.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -25,7 +27,7 @@
 			<a href="../index.html" class="active">Home</a>
 
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/about.html">About <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/about.html">About </a>
 
 				</button>
 				<div class="dropdown-content">
@@ -34,7 +36,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/hiking.html">Hiking <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/hiking.html">Hiking </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/best_hikes.html">Best Hikes</a>
@@ -42,7 +44,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/places.html">Places <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/places.html">Places </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/gallery.html">Gallery</a>
@@ -51,7 +53,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/contact.html">Contact <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/contact.html">Contact </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/join_us.html">Join Us</a>
