--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -19,6 +19,8 @@
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script type="text/javascript" src="../scripts/jquery.flexslider-min.js"></script>
 	<script type="text/javascript" src="../scripts/slider.js"></script>
+	<script type="text/javascript" src="../scripts/nav.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -28,7 +30,7 @@
 			<a href="../index.html" class="active">Home</a>
 
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/about.html">About <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/about.html">About </a>
 
 				</button>
 				<div class="dropdown-content">
@@ -37,7 +39,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/hiking.html">Hiking <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/hiking.html">Hiking </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/best_hikes.html">Best Hikes</a>
@@ -45,7 +47,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/places.html">Places <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/places.html">Places </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/gallery.html">Gallery</a>
@@ -54,7 +56,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/contact.html">Contact <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/contact.html">Contact </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/join_us.html">Join Us</a>
