--- a/pages/gift.html
+++ b/pages/gift.html
@@ -15,6 +15,8 @@
 	<script src="scripts/respond.js"></script>
 	<link href="../css/main.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="../scripts/search.js"></script>
+	<script type="text/javascript" src="../scripts/nav.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -24,7 +26,7 @@
 			<a href="../index.html" class="active">Home</a>
 
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/about.html">About <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/about.html">About </a>
 
 				</button>
 				<div class="dropdown-content">
@@ -33,7 +35,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/hiking.html">Hiking <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/hiking.html">Hiking </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/best_hikes.html">Best Hikes</a>
@@ -41,7 +43,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/places.html">Places <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/places.html">Places </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/gallery.html">Gallery</a>
@@ -50,7 +52,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="dropbtn"><a href="../pages/contact.html">Contact <i class="fa fa-caret-down"></i></a>
+				<button class="dropbtn"><a href="../pages/contact.html">Contact </a>
 				</button>
 				<div class="dropdown-content">
 					<a href="../pages/join_us.html">Join Us</a>
