added new styling

--- a/pages/news.html
+++ b/pages/news.html
@@ -82,7 +82,7 @@
 				<p>Why Do Some Trails Close When It Rains?</p>
 				<h4>Storm Alert</h4>
 				<p>Check the weather report.</p>
-				<a href="http://www.accuweather.com/en/us/san-diego-ca/92101/weather-forecast/347628" class="aw-widget-legal">
+				<a href="https://www.accuweather.com/en/us/san-diego-ca/92101/weather-forecast/347628" class="aw-widget-legal">
 				</a>
 				<div id="awcc1484984818295" class="aw-widget-current" data-locationkey="" data-unit="f" data-language="en-us" data-useip="true" data-uid="awcc1484984818295"></div>
 			</div>
@@ -96,7 +96,7 @@
 						<ol>
 							<li>
 								<label for="name">name</label>
-								<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First"  required /> <span class="require">*</span>
+								<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First" required /> <span class="require">*</span>
 							</li>
 							<li>
 								<label for="email">email </label>
