added new styling

--- a/pages/other_places.html
+++ b/pages/other_places.html
@@ -67,10 +67,10 @@
 		</div>
 
 		<header>
-			<a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo"></a>
-			<h1>Hidden San Diego</h1>
-			<h2>Hikes Resources</h2>
-			<div id="mapCanvas"></div>
+		<a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo">
+				<h1>Hidden San Diego</h1>
+				<h2>Hikes Resources</h2>
+			</a>
 		</header>
 		<section>
 			<div class="onLeftContent">
