--- a/pages/best_hikes.html
+++ b/pages/best_hikes.html
@@ -65,9 +65,10 @@
 		</div>
 
 		<header>
-			<a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo"></a>
-			<h1>Hidden San Diego</h1>
-			<h2>Hikes Resources</h2>
+			<a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo">
+				<h1>Hidden San Diego</h1>
+				<h2>Hikes Resources</h2>
+			</a>
 
 			<iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Hiking" src="https://arcg.is/84uyO"></iframe>
 		</header>
@@ -113,7 +114,7 @@
 						<ol>
 							<li>
 								<label for="name">name</label>
-								<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First"  required /> <span class="require">*</span>
+								<input type="text" id="name" name="name" title="Please enter you name" placeholder="Last, First" required /> <span class="require">*</span>
 							</li>
 							<li>
 								<label for="email">email </label>
