--- a/pages/la_jolla.html
+++ b/pages/la_jolla.html
@@ -65,9 +65,10 @@
 		</div>
 
 		<header>
-			<a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo"></a>
-			<h1>Hidden San Diego</h1>
-			<h2>Hikes Resources</h2>
+			<a href="../index.html" class="logo"><img src="../images/Logo_f.svg" alt="Hidden San Diego Logo">
+				<h1>Hidden San Diego</h1>
+				<h2>Hikes Resources</h2>
+			</a>
 		</header>
 		<section>
 			<div class="onLeftContent">
