--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 	<script type="text/javascript" src="scripts/nav.js"></script>
 
 	<script type="text/javascript" src="scripts/map.js"></script>
-<!--	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0&signed_in=true&callback=initMap"></script>-->
-	<script
-  src="https://maps.googleapis.com/maps/api/js?callback=initMap&signed_in=true&key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0Y" async defer>
-</script>
+	<!--	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0&signed_in=true&callback=initMap"></script>-->
+	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap&signed_in=true&key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0" async defer>
+	</script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?v=3.27&key=YOUR_API_KEY&signed_in=true&callback=initMap">
+	</script>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
