--- a/index.html
+++ b/index.html
@@ -18,24 +18,6 @@
 
 	<script type="text/javascript" src="scripts/nav.js"></script>
 
-	<script type="text/javascript" src="scripts/map.js"></script>
-	<!--	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0&signed_in=true&callback=initMap"></script>-->
-	<!--
-	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap&signed_in=true&key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0" async defer>
-</script>
--->
-	<!--
-<script async defer src="https://maps.googleapis.com/maps/api/js?v=3.27&key=YOUR_API_KEY&signed_in=true&callback=initMap">
-</script>
--->
-	<!--
-	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap&key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0" async defer>
-	</script>
--->
-
-	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC__jIXLZwANXkTvJCVPdCPSinS2nZYYY0&callback=initMap">
-	</script>
-
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -101,7 +83,9 @@
 				<h1>Hidden San Diego</h1>
 				<h2>Hikes Resources</h2>
 
-				<div id="mapCanvas"></div>
+				<div>
+					<iframe width="100%" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="Hiking" src="https://arcg.is/84uyO"></iframe>
+				</div>
 			</a>
 		</header>
 		<!--main section -->
